# dimigomeal-cron

./: .gitlab-ci.yml  Cargo.toml  Dockerfile  cron  data.sql  structure.sql
src/: main.rs
