[package]
name = "dimigomeal-cron"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.37"
regex = "1.10.4"
reqwest = { version = "0.12", features = ["json"] }
rusqlite = "0.31.0"
tokio = { version = "1", features = ["full"] }
visdom = "1.0.0"
